Fixed numbers being too low on tiles.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -596,7 +596,7 @@
     visibility: visible;
     color: white;
     font-size: 2rem;
-    line-height: 150px;
+    line-height: 75px;
   }
   
   .number_visible_black {
